--- a/src/components/Settings/SettingsCSS/school-details.module.css
+++ b/src/components/Settings/SettingsCSS/school-details.module.css
@@ -25,29 +25,34 @@
     flex-direction: row;
     margin-top: 20px;
     margin-left: 10px;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .details{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 .adminStyles{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 .details input{
     background-color: transparent;
     padding: 15px;
-    width: 300px;
     border: none;
-    margin-left: 10px;
-    outline: none;
+    width: 250px;
+
+    margin:  10px;
     font-size: min(16px, 3vw);
     color: #111115;
+    outline: 1px solid #03a4ff;
     border-radius: 5px;
 }
 .details input::placeholder{
@@ -77,14 +82,18 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap: wrap;
   }
-
+  .Data p{
+    color: #111115;
+    font-size: 10px;
+  }
 
   /* //////////////////////////// */
 
   .coordinates > input{
     padding: 16px;
-    width: 85%;
+    width: 100%;
     color: #111115;
     background: #ffffff;
     outline: 1px solid #03a4ff;
@@ -99,6 +108,10 @@
     margin-top: 40px;
 }
 .coordinates p {
+    color: #111115;
+    font-size: 13px;
+}
+.coordinates h3{
     color: #111115;
 }
 .coordinates input:focus{
@@ -120,7 +133,9 @@
     cursor: pointer;
     margin-top: 30px;
 }
-
+.submit:active{
+    background: #68696A;
+}
 .listIns li{
     color: #68696A;
     margin-bottom: 10px;
