--- a/src/components/Settings/SettingsCSS/school-details.module.css
+++ b/src/components/Settings/SettingsCSS/school-details.module.css
@@ -1,10 +1,11 @@
 .Container{
-    width: min(90vw, 1180px);
+    width: min(90vw, 1440px);
     margin: auto;
     display: flex;
     flex-direction: column;
     margin-bottom: 50px;
     background: #ffffff;
+    position: relative;
 }
 
 .profileImage{
