--- a/src/components/HomePageCSS/homePage.module.css
+++ b/src/components/HomePageCSS/homePage.module.css
@@ -1,8 +1,8 @@
 .sidePanel {
     height: 100%;
     width: 200px;
-    /* background-color: #acd7f5;
-    background-color: #111115; */
+    /* /* background-color: #acd7f5; */
+    background-color: #111115;
     border-radius: 0px;
     display: flex;
     flex-direction: column;
