--- a/src/components/HomePageCSS/schoolsUpdates.module.css
+++ b/src/components/HomePageCSS/schoolsUpdates.module.css
@@ -1,5 +1,178 @@
 .container{
     background: #FFFFFF;
     color: #111115;
+    display: inline-flex;
+    width: 100vw;
+    margin: auto;
+    position: relative;
 }
+.panel{
+    height: 100vh;
+    width: 240px;
+    position:sticky;
+    overflow: hidden;
+    top: 0;
+    /* background-color: #acd7f5; */
+    /* background-color: #111115;  */
+  }
 
+  /* Grid layout */
+  .gridLayout{
+    /* width: min(1230px, 95vw); */
+    margin:0 auto;
+    display: grid;
+    gap: 5px;
+    padding:5px ;
+    padding-bottom: 20px;
+    padding-right: 15px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 300px 200px 200px 50px 100px 200px ;
+    column-width: min(300px, 100%);
+    width: min(1440px, 95vw);
+    height: 100vh;
+  }
+  
+  .newsLetter{
+    border: 1px solid #03a4ff;
+    border-radius: 5px;
+    grid-area: news;
+   grid-row: 1;
+   grid-column: 1;
+   display: flex;
+   flex-direction: column;
+    padding: 10px 0;
+   align-items: center;
+   /* height: fit-content; */
+  }
+  .newsLetter p {
+    width: 60%;
+    text-align: center;
+    font-size: min(15px, 3vw);
+
+  }
+  .newsLetter p strong{
+    color: #03a4ff;
+  }
+
+  .messagesPanel{
+    border: 1px solid #03a4ff;
+    border-radius: 5px;
+    grid-area: messages;
+    grid-row: 1/span 4;
+    grid-column: 2;
+   
+    padding: 10px 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .messagesPanel .search{
+    width: 90%;
+    padding: 10px;
+    background: #fbfbfb;
+    height: 40px;
+    border-radius: 100px;
+    display: inline-flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .messagesPanel .search input{
+    height: 90%;
+    width: 100%;
+    background: transparent;
+    outline: none;
+    border-radius: 100px;
+    text-indent: 25px;
+    border: none;
+    color: #111115;
+    margin-left: 10px;
+  }
+  .messagesPanel .search svg{
+    position: absolute;
+    left: 15px;
+  }
+  .messagesPanel p {
+    width: 70%;
+    text-align: center;
+    font-size: min(13px, 3vw);
+  }
+  .Meetings{
+    border: 1px solid #03a4ff;
+    border-radius: 5px;
+    grid-area: meetings;
+    grid-column: 1;
+    grid-row: 2;
+    padding: 10px;
+  }
+  .Meetings .header{
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+  }
+  .Meetings .header svg{
+    width: 35px;
+    height: 35px;
+    margin-right: 5px;
+  }
+
+  .Meetings p strong{
+    color: #03a4ff;
+  }
+
+  .createPosts{
+    border: 1px solid #03a4ff;
+    border-radius: 5px;
+    grid-area: posts;
+    grid-column: 1;
+    grid-row: 3;
+    padding: 10px;
+  }
+  .createPosts .header{
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+  }
+  .createPosts .header svg{
+    width: 35px;
+    height: 35px;
+    margin-right: 10px;
+  }
+
+  .createPosts p strong{
+    color: #03a4ff;
+  }
+  .Timeline{
+    border: 1px solid #03a4ff;
+    border-radius: 5px;
+    grid-area: timeline;
+    grid-row: 5/ span 2;
+    grid-column: 1 / span 2;
+  }
+
+
+
+
+
+  /* ;;;;;;;;;;;;;; */
+
+  @media (max-width: 1240px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    width: 98vw;
+  }
+ 
+  .panel{
+    width: 100vw;
+    height: fit-content;
+    align-items: center;
+    position: relative;
+    background: transparent;
+  }
+}
