--- a/src/components/HomePageCSS/schoolsUpdates.module.css
+++ b/src/components/HomePageCSS/schoolsUpdates.module.css
@@ -60,7 +60,7 @@
     grid-area: messages;
     grid-row: 1/span 4;
     grid-column: 2;
-   
+    overflow-y: auto;
     padding: 10px 5px;
     display: flex;
     flex-direction: column;
@@ -96,7 +96,7 @@
   .messagesPanel p {
     width: 70%;
     text-align: center;
-    font-size: min(13px, 3vw);
+    font-size: min(13px, 2vw);
   }
   .Meetings{
     border: 1px solid #03a4ff;
@@ -117,7 +117,9 @@
     height: 35px;
     margin-right: 5px;
   }
-
+  .Meetings p{
+    font-size: min(15px, 3vw);
+  }
   .Meetings p strong{
     color: #03a4ff;
   }
@@ -145,15 +147,25 @@
   .createPosts p strong{
     color: #03a4ff;
   }
+  .createPosts p{
+    font-size: min(15px, 3vw);
+  }
   .Timeline{
     border: 1px solid #03a4ff;
     border-radius: 5px;
     grid-area: timeline;
     grid-row: 5/ span 2;
     grid-column: 1 / span 2;
+    display: flex;
+    flex-direction: row;
+    padding-top: 10px;
   }
-
-
+.upcoming{
+  width: 50%;
+}
+.recent{
+  width: 50%;
+}
 
 
 
