--- a/src/components/HomePageCSS/table.module.css
+++ b/src/components/HomePageCSS/table.module.css
@@ -105,3 +105,7 @@
   .subHeadings td:first-child{
     border-left: 1px solid #2e393a;
   }
+  .userName{
+    text-align: left !important;
+    padding-left: 20px !important;
+  }
