--- a/src/components/HomePageCSS/login.module.css
+++ b/src/components/HomePageCSS/login.module.css
@@ -73,7 +73,7 @@
   
     width: 95%;
     color: #111115;
-    background: #f7f7f7;
+    background: #ffffff;
     outline: 1px solid #03a4ff;
     border: none;
     border-radius: 5px;
