--- a/src/components/HomePageCSS/signup.module.css
+++ b/src/components/HomePageCSS/signup.module.css
@@ -99,7 +99,7 @@
     padding: 20px;
     width: 90%;
     color: #111115;
-    background: #f7f7f7;
+    background: #ffffff;
     outline: 1px solid #03a4ff;
     border: none;
     border-radius: 5px;
