--- a/src/components/HomePageCSS/home.module.css
+++ b/src/components/HomePageCSS/home.module.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
 
 .container{
-    background-color: #fafafa;
+    background-color: #ffffff;
     color: #111115;
 
 }
