--- a/src/components/HomePage/School-Updates/SchoolCSS/meetings.module.css
+++ b/src/components/HomePage/School-Updates/SchoolCSS/meetings.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     width: 100vw;
+    background: #fff;
 }
 .Form{
     display: flex;
@@ -78,6 +79,7 @@
     position: absolute !important;
     right: 30px;
     top: 10px;
+    z-index: 20;
 }
 
 .Send{
