--- a/src/components/HomePageCSS/schoolsUpdates.module.css
+++ b/src/components/HomePageCSS/schoolsUpdates.module.css
@@ -30,7 +30,7 @@
     grid-template-rows: 300px 200px 200px 50px 100px 200px ;
     column-width: min(300px, 100%);
     width: min(1440px, 95vw);
-    height: 100vh;
+    margin-bottom: 20px;
   }
   .newsLetter{
     cursor: pointer;
@@ -68,6 +68,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
   }
   .messagesPanel .search{
     width: 90%;
@@ -163,7 +164,10 @@
     grid-column: 1 / span 2;
     display: flex;
     flex-direction: row;
+    min-height: 300px;
+    height:fit-content;
     padding-top: 10px;
+    padding-bottom: 20px;
   }
 .upcoming{
   width: 50%;
@@ -172,7 +176,15 @@
   width: 50%;
 }
 
-
+.RightHeader{
+  width: 100%;
+  text-align: left;
+  position: sticky;
+  top: 0; 
+  padding: 10px 0;
+  background: #ffffff;
+  margin: 0;
+}
 
   /* ;;;;;;;;;;;;;; */
 
