--- a/src/components/Settings/SettingsCSS/add-member.module.css
+++ b/src/components/Settings/SettingsCSS/add-member.module.css
@@ -26,7 +26,16 @@
     font-size: min(16px, 3vw);
     margin-bottom: 20px;
 }
-
+.positions{
+    width: 85%;
+    color: #111115;
+    background: #ffffff;
+    outline: none;
+    border-color: #03a4ff;
+    border-radius: 5px;
+    font-size: min(13px, 3vw);
+    margin-bottom: 20px;
+}
 .formHolder{
     width: 100%;
 }
