--- a/src/components/HomePageCSS/home.module.css
+++ b/src/components/HomePageCSS/home.module.css
@@ -3,7 +3,8 @@
 .container{
     background-color: #ffffff;
     color: #111115;
-
+    position: relative;
+    width: min(1440px, 100vw);
 }
 
 .NavBar{
@@ -87,12 +88,12 @@
 }
 .Images{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 700px;
+    flex-direction: row;
+    width: min(1440px, 100vw);
     position: relative;
+    justify-content: space-between;
+    padding: 0;
+    height: fit-content;
 }
 .dashProfile{
     width: 100px;
@@ -106,54 +107,46 @@
     
   }
 .image1{
-    width: 500px;
-    position: absolute;
-    background: transparent;
-    background-image: url("https://i.ibb.co/XkDxFwq/Light-Dash.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 580px;
-    left: 60px;
+    width: 557px;
+    position: relative;
+    height: 657px;
+    left: 40px;
+    top: 40px;
     z-index: 0;
     border-radius: 10px;
 }
 .image2{
-    width: 500px;
+    width: 503px;
     position: absolute;
-    height: 580px;
-    background: transparent;
-    background-image: url("https://i.ibb.co/6JC28LS/Light-Dash-One.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    top: 300px;
-    left: 460px;
+    height: 596px;
+   bottom: 0px;
+    left: 480px;
+    z-index: 1;
     border-radius: 10px;
 }
 .image3{
-    width: 200px;
-    position: absolute;
+    width: 250px;
+    position: relative;
     height: 430px;
-    background-image: url("https://i.ibb.co/st6W3wB/LightApp.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    right: 140px;
     border-radius: 10px;
-    bottom: 300px;
+    right: 40px;
+    top: -20px;
+    
 }
 .image4{
-    width: 200px;
-    position: absolute;
+    width: 250px;
+    position: relative;
     height: 430px;
-    background-image: url("https://i.ibb.co/d0RnC4s/Light-App-One.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    right: 140px;
+    right: 40px;
     border-radius: 10px;
-    top: 430px;
+
+ 
 
 }
 
