--- a/src/components/HomePageCSS/table.module.css
+++ b/src/components/HomePageCSS/table.module.css
@@ -51,10 +51,13 @@
     margin-bottom: 30px;
    
   }
-
-  .header th td{
+  .times span{
+    width: 25%;
+    margin: 0 5px;
+  }
+  .header th span{
     font-size: min(3vw, 13px);
-    padding: 5px;
+    padding: 10px;
     text-align: center;
     width: 25%;
 
@@ -62,6 +65,7 @@
   .header th{
     border-bottom: 1px solid #2e393a;
     border-right: 1px solid #2e393a;
+    height: 40px;
   }
   .header th:first-child{
     border-left: 1px solid #2e393a;
@@ -104,6 +108,7 @@
   }
   .subHeadings td:first-child{
     border-left: 1px solid #2e393a;
+    min-width: 150px;
   }
   .userName{
     text-align: left !important;
