--- a/src/components/HomePageCSS/HomeStyles/Convos.module.css
+++ b/src/components/HomePageCSS/HomeStyles/Convos.module.css
@@ -198,14 +198,14 @@
 }
 
 
-.image1{
+.imageD1{
     width: 213px;
     height: 171px;
     position: absolute;
     left: -10%;
     top: 50%;
 }
-.image2{
+.imageD2{
     width: 120px;
     height: 120px;
     position: absolute;
