--- a/src/components/HomePage/School-Updates/SchoolCSS/categories.module.css
+++ b/src/components/HomePage/School-Updates/SchoolCSS/categories.module.css
@@ -74,16 +74,21 @@
 }
 
 .formHolder{
-    width: min(100vw, 980px);
+    width: min(100vw, 1440px);
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 30px;
     gap: 20px;
     margin: auto;
-
+    padding-bottom: 40px;
+    overflow-y: auto;
+    max-height: 90vh;
+    padding-right: 10px;
 }
 
 .formHolder .formInputs{
-    width: 100%;
+    width: min(97vw, 900px);
+
+    position: relative;
 }
