--- a/src/components/HomePage/School-Updates/SchoolCSS/upcoming.module.css
+++ b/src/components/HomePage/School-Updates/SchoolCSS/upcoming.module.css
@@ -1,12 +1,13 @@
 .container{
     width: 90%;
-    min-height: 130px;
+    min-height: 100px;
     border: 1px solid #03a4ff;
     margin: auto;
     border-radius: 5px;
     padding: 5px;
     position: relative;
     margin-bottom: 10px;
+
 }
 .header{
     display: inline-flex;
@@ -15,8 +16,8 @@
     width: 100%;
   }
 .header svg{
-    width: 35px;
-    height: 35px;
+    width: 25px;
+    height: 25px;
     margin-right: 10px;
   }
   .header h4{
@@ -37,4 +38,20 @@
     padding: 0;
     margin: 0;
     font-size: min(15px, 3vw);
+}
+
+.edit{
+  width: 90px;
+  height: 30px;
+  border-radius: 5px;
+  color: #ff8800;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  font-size: 12px;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  cursor: pointer;
 }
