--- a/src/components/HomePageCSS/Loader.module.css
+++ b/src/components/HomePageCSS/Loader.module.css
@@ -2,29 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     background-color: #ffffff;
 }
-@keyframes scaner {
-    0% {
-      background-position: 100% 0;
-    }
-    100% {
-      background-position: -100% 0;
-    }
-  }
-  
-.cont h1{
-    font-weight: bold;
-    display: inline-block;
-    background: linear-gradient(to right, #00a2ff, #ffffff);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    animation: scaner 2s linear infinite alternate;
-    font-size: min(60px, 12vw);
-  }
   
 .cont span {
     height: 150%;
@@ -34,41 +15,7 @@
     border-radius: 5px;
     animation: scan 1.5s ease-in-out infinite alternate;
 }
-.container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-}
-@keyframes scaner {
-  0% {
-    background-position: 100% 0;
-  }
-  100% {
-    background-position: -100% 0;
-  }
-}
 
-.cont h1{
-  font-weight: bold;
-  display: inline-block;
-  background: linear-gradient(to right, #00a2ff, #ffffff);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  animation: scaner 2s linear infinite alternate;
-  font-size: min(60px, 12vw);
-}
-
-.cont span {
-  height: 120%;
-  width: 40px;
-  background: #0096ecaf;
-  position: absolute;
-  border-radius: 3px;
-  animation: scan 1s ease-in-out infinite alternate;
-}
 .dashProfile{
   width: 240px;
   height: 240px;
@@ -80,17 +27,6 @@
   background-repeat: no-repeat;
   
 }
-/* 
-.cont{
-  width: fit-content;
-  height: 100px;
-  border: 2px solid #00c3ff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  border-radius: 5px;
-} */
 
 @keyframes scan{
   0%{
@@ -109,6 +45,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+   margin: auto;
     border-radius: 5px;
 }
 
