--- a/src/components/HomePageCSS/HomeStyles/Footer.module.css
+++ b/src/components/HomePageCSS/HomeStyles/Footer.module.css
@@ -11,4 +11,10 @@
     color: #b6b6b6;
     background: #1f1f1f;
     font-size: min(3vw, 16px);
+    gap: 20px;
+    padding: 0 10px;
+}
+
+.cont p{
+    font-size: min(3vw, 14px);
 }
