--- a/src/components/Settings/SettingsCSS/movement.module.css
+++ b/src/components/Settings/SettingsCSS/movement.module.css
@@ -12,13 +12,13 @@
 }
 
 .cardContainer{
-    height: 70vh;
-    max-height: 400px;
+    min-height: 200px;
+    max-height: 600px;
     padding-bottom: 30px;
     display: inline-flex;
-    flex-direction: row-reverse;
+
    flex-wrap: wrap;
-   gap: 10px;
+   gap: 15px;
    padding-top: 20px;
    justify-content: center;
    overflow-y: auto;
@@ -91,5 +91,5 @@
     padding: 0px 25px;
     border-radius: 10px;
     color: #ffffff;
-    margin-top: 30px;
+    margin-top: 10px;
 }
