--- a/src/components/HomePageCSS/homePage.module.css
+++ b/src/components/HomePageCSS/homePage.module.css
@@ -274,6 +274,10 @@
     .sidePanel a p{
       display: none;
     }
+    .sidePanel a:hover{
+      background-color: transparent;
+    }
+    
     .searchContainer {
       width: 98%;
       margin: auto;
