--- a/src/components/Settings/SettingsCSS/movement.module.css
+++ b/src/components/Settings/SettingsCSS/movement.module.css
@@ -97,10 +97,11 @@
 .users{
     position: absolute;
     width: min(500px, 95vw); 
-    min-height: 10px;
+    min-height: 200px;
     max-height: 300px;
     background-color: #03a4ff;
     top: 90%;
+    border: 2px solid #f5f5f5;
     border-radius: 15px;
     z-index: 5;
     display: none;
@@ -120,7 +121,7 @@
     display: flex;
     align-items: center;
     justify-content: left;
-    padding: 0 5px;
+    padding: 5px;
 }
 
 .profileImage{
