--- a/src/components/HomePageCSS/home.module.css
+++ b/src/components/HomePageCSS/home.module.css
@@ -31,12 +31,26 @@
 .navList li a{
     text-decoration: none;
     color: #111115;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+.navList li{
+    text-decoration: none;
+    color: #111115;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+  
 }
 .navList li:active, .navList li a:active{
     color: #03a4ff;
     text-decoration: none;
 }
-
+.navList li:hover, .navList li a:hover{
+    scale: 1.05;
+}
 .logoHolder{
     margin-left: 30px;
 }
