--- a/src/components/HomePageCSS/login.module.css
+++ b/src/components/HomePageCSS/login.module.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 70px;
+    margin-bottom: 100px;
     }
     .textHolder{
         margin: auto;
