--- a/src/components/HomePageCSS/HomeStyles/Convos.module.css
+++ b/src/components/HomePageCSS/HomeStyles/Convos.module.css
@@ -170,6 +170,9 @@
     color: #03a4ff;
 }
 
+.Button{
+    margin-top: 30px;
+}
 
 .Button a{
     background-color: #03a4ff;
@@ -182,7 +185,7 @@
     align-items: center;
     border-radius: 5px;
     cursor: pointer;
-
+    z-index: 3;
 }
 
 .Button a {
