--- a/src/components/HomePageCSS/login.module.css
+++ b/src/components/HomePageCSS/login.module.css
@@ -12,10 +12,10 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 70px;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
     }
     .textHolder{
-        margin: auto;
+        margin: 50px auto;
     }
 .textHolder h1{
     font-size: min(78px, 5vw);
