--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
 
 
 
 * {
   user-select: none;
+  font-family: 'Inter', sans-serif;
 }
 body{
   width: min(100vw, 1440px);
@@ -13,6 +14,7 @@ body{
   position: relative;
   overflow-x: hidden;
   font-family: 'Inter', sans-serif;
+  background: #fff;
 }
 
 ::-webkit-scrollbar {
