--- a/src/components/HomePageCSS/homePage.module.css
+++ b/src/components/HomePageCSS/homePage.module.css
@@ -1,305 +1,122 @@
-.sidePanel {
-    height: 100%;
-    width: 200px;
-    /* /* background-color: #acd7f5; */
-    background-color: #111115;
-    border-radius: 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding-top: 60px;
-    padding-left: 5px;
-    padding-right: 5px;
-    /* margin-top: 10px; */
-    /* margin-left: 10px; */
-    /* margin-right: 20px; */
-    position: fixed;
-    top: 0px;
-   
-  }
-
-  .panel{
-    height: 100vh;
-    width: 250px;
-    position:sticky;
-    overflow: hidden;
-    top: 0;
-    /* background-color: #acd7f5; */
-    background-color: #111115; 
-  }
-  .sidePanel a{
-    display: inline-flex;
-    justify-content: left;
-    align-items: center;
-    width: 95%;
-    font-size: 13px;
-    padding-left: 5px;
-    color: #c9c5c5;
-    text-decoration: none;
-  }
-  .sidePanel a:hover{
-    background: #6b6a6a4b;
-    border-radius: .6rem;
-  }
-  .sidePanel a p {
-    margin-left: 5px;
-   }
-  .sideIcon svg {
-    width: min(25px, 5vw);
-    height: min(25px, 5vw);
-    background: transparent;
-    margin: 20px 0;
-    position: relative;
-    fill: #FFFFFF;
-    
-  }
-  
-  .searchIcon {
-    width: min(20px, 4vw);
-    height: min(20px, 4vw);
-    background: transparent;
-    margin: 20px 0;
-    position: relative;
-    margin-left: 20px;
-    stroke: #111115;
-  }
-  
-  .searchBar>input {
-    width: 95%;
-    height: 75%;
-    background: transparent;
-    outline: none;
-    border: none;
-    margin-left: 10px;
-    color: #111115;
-  }
-  
-  .searchBar>input::placeholder {
-    color: #68696A;
-  }
-  
-  .sideIcon:hover {
-    cursor: pointer;
-  
-  }
-  
-  .searchContainer {
-    width: 100%;
-    height: 200px; 
-    /* background-color: #acd7f5; */
-    background-color: #ffffff;
-    /* margin-top: 10px; */
-    position: sticky;
-    top: 0px;
-    z-index: 2;
-  }
-  
-  .container {
-    position: relative;
-    width: 100vw;
-    display: flex;
-    flex-direction: row;
-    color: #111115;
-    background-color: #f8f8f8;
-  }
-  
-  .nav {
-    width: 100%;
-    display: flex;
-    margin-top: 20px;
-    padding: 0;
-    margin: 0;
-    flex-direction: column;
-    justify-content: right;
-    align-items: flex-end;
-  }
-  
-  .nameHolder {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-left: 20px;
-    margin-top: 20px;
-  }
-  
-  .imageHolder {
-    border-radius: 100%;
-    width: 80px;
-    height: 80px;
-    /* background: #0f0f14; */
-    background-image: url("https://i.ibb.co/4T4yVwF/LOGO.png");
-    background-position: center;
-    background-clip: border-box;
-    background-repeat: no-repeat;
-    background-size: contain;
-    margin-right: 10px;
-  }
-  
-  .name {
-    flex-direction: column;
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  .name>p,
-  .name>h4 {
-    margin: 5px;
-    padding: 0;
-  }
-  
-  .name>p {
-    color: #68696A;
-  }
-  .logOut{
-    width: 25px;
-    height: 25px;
-    stroke: rgb(253, 100, 100);
-    cursor: pointer;
-
-    }
-  .searchBar {
-    background-color: #F0F1FF;
-    width: 90%;
-    height: 50px;
-    margin: auto;
-    margin-top: 20px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-  
-  }
-  
-  .categories {
-  
-    display: flex;
-    flex-direction: row;
-    width: 40%;
-    justify-content: space-evenly;
-    margin-top: 20px;
-  }
-  
-  .profiles {
-    width: min(600px, 70vw);
-    margin: auto;
-    margin-top: 0px;
-    display: grid;
-     justify-content: center; /* Center the grid horizontally */
-    grid-template-columns: repeat(4, 1fr); /* Initially, 4 columns */
-    gap: 5px;
-  }
-
-  @media screen and (max-width: 1038px) {
-  .profiles {
-    grid-template-columns: repeat(3, 1fr); /* Change to 2 columns on smaller screens */
-  }
+.container{
+  border: 1px solid #03a4ff;
+  width: min(1400px, 90vw);
+  height: 98vh;
+  margin: auto;
+  border-radius: 20px;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
 }
-  @media screen and (max-width: 768px) {
-  .profiles {
-    grid-template-columns: repeat(2, 1fr); /* Change to 2 columns on smaller screens */
-  }
+.content{
+  width: 100%;
+  height: 100%;
+}
+/* Style the menu */
+.menu{
+  width: 100%;
+  height: 80px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-top-right-radius: 20px;
+  position: relative;
+  box-shadow: 0 4px 8px 0 rgba(177, 177, 177, 0.2);
 }
 
-
-/* Media query for even smaller screens */
-@media screen and (max-width: 516px) {
-  .profiles {
-    grid-template-columns: 1fr; /* Single column on the smallest screens */
-  }
+/* Style the intro panel */
+.intro{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 20px;
+  cursor: pointer;
+  width: 100%;
 }
-  .logOut{
-    position: absolute;
-    right: 30px;
-    top: 20px;
-    cursor: pointer;
-    
-  }
-  .cat {
-    width: min(100px, 30vw);
-    background-color: #111115;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-    cursor: pointer;
-    margin: 2px;
-    padding: 5px;
-  }
-  
-  .cat>p {
-    font-size: min(12px, 2.4vw);
-  }
-  
-  .cat:active {
-    background: #68696A;
-  }
-  
-  .Sele {
-    font-size: min(12px, 2.4vw);
-  }
-  
-  @media (max-width: 1240px) {
-    .container {
-      flex-direction: column;
-      align-items: center;
-      margin: auto;
-      width: 98vw;
-    }
-    .sidePanel a{
-      display: block;
-      width: fit-content;
-    }
-    .sidePanel {
-      height: 60px;
-      width: 98%;
-      border-radius: .6rem;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: center;
-      margin: auto;
-      margin-top: 10px;
-      padding: 0;
-      position: relative;
-      background: #111115;
-    }
-    .panel{
-      width: 100vw;
-      height: fit-content;
-      align-items: center;
-      position: relative;
-      background: transparent;
-    }
-    .sidePanel a p{
-      display: none;
-    }
-    .sidePanel a:hover{
-      background-color: transparent;
-    }
-    
-    .searchContainer {
-      width: 98%;
-      margin: auto;
-      margin-top: 20px;
-      position: relative;
-      border-radius: .6rem;
-    }
-  
-    .categories {
-      display: flex;
-      flex-direction: row;
-      width: 90vw;
-      justify-content: left;
-      margin: auto;
-      margin-top: 20px;
-  
-    }
-  
-    .nav {
-      width: 100vw;
-      margin: 0;
-      padding: 0;
-    }
-   
-  }
+
+/* Style Logout*/
+.logout{
+  margin-right: 20px;
+}
+
+.logout button{
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: #03a4ff;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+/* Button Onclick */
+.logout button:active{
+  color: #111115;
+  background: #ffffff;
+  border: #03a4ff 1px solid;
+}
+
+/*  Style the summary section  */
+
+.summary{
+  width: 80%;
+  height: 130px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+}
+
+.summary .sumDiv{
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: flex-start;
+  margin: auto;
+  width: 40%;
+  height: 100%;
+  background: #ffffff;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(177, 177, 177, 0.2);
+  padding: 10px;
+}
+
+/* Summary title */
+.sumDiv .sumTitle{
+  color: #111115;
+  font-weight: normal;
+  font-size: min(16px, 4vw);
+  text-align: center;
+  margin-left: 20px;
+}
+
+.summaryHeader{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+}
+.header {
+  color: #979999;
+  margin-bottom: 10px;
+}
+.present{
+  font-size: min(20px, 4vw);
+  color: #111115;
+  font-weight: bolder;
+}
+
+.summaryHeader span{
+  border-left: #c0c0c0 2px solid;
+  height: 40px;
+  margin-top: 10px;
+}
