--- a/src/components/HomePageCSS/dashProfile.module.css
+++ b/src/components/HomePageCSS/dashProfile.module.css
@@ -1,137 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
-.Tri{
-    position: absolute;
-    top:50%;
-    transform: translate(-50%, -50%);
-    right: 0;
+.userContainer{
+display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 98%;
+  padding:0 20px;
+  height: 50px;
+  margin: auto;
+  border-left: #03a4ff 1px solid;
+  border-right: #03a4ff 1px solid;
+  border-bottom: #03a4ff 1px solid;
 }
-.profileImage{
-    background: #03a4ff;
-    width: 59px;
-    height: 75px;
-    margin-right: 10px;
-    position: relative;
-    background-image: url("");
-    background-position: center;
-    background-clip: border-box;
-    background-repeat: no-repeat;
-    background-size: cover;
-    left: 30px;
-    border: 1px solid #04A3FF;
-    border-radius: 1px;
-    
-}
-.details{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-shrink: 0;
-}
-.details h2{
-    font-size: 10px;
-    font-weight: bold;
-    width: 85%;
+
+.userContainer p{
+    color: #111115;
+    font-weight: normal;
+    font-size: min(12px, 2vw);
+    width: 12.5%;
     text-align: center;
-    text-transform: uppercase;
-    font-family: "Inter";
+  }
 
-}
-.cardDetails{
+  /* Button */
+
+  .btn{
+    padding: 2px 20px;
     display: flex;
-    flex-direction: row;
-    flex-shrink: 0;
-    align-items: flex-start;
-   
-}
-
-.profileDetails{
-    margin-left: 30px;
-}
-
-.profileDetails > p{
-    font-size: min(7px, 3vw);
-    text-transform: uppercase;
-    font-weight: bold;
-    width: 100px;
-   
-}
-.profileDetails > .Name{
-    font-size: min(9px, 3vw);
-    text-transform: uppercase;
-    font-weight: bold;
-    width: 100px;
-  
-}
-
-
-.profileDetails h4{
-    font-weight: 900;
-    font-size: min(10px, 4vw);
-    text-transform: uppercase;
-    border-bottom: 2px solid #04A3FF;
-    text-align: center;
-    width: 100px;
-    padding-bottom: 5px;
-}
-
-.Links{
-    text-decoration: none;
-    color: inherit;
     width: fit-content;
-    height: fit-content;
-    display: flex;
+    border-radius: 5px;
     flex-direction: row;
-    justify-content: left;
+    align-items: center;
     cursor: pointer;
-    margin-bottom: 20px;
-    position: relative;
-    border: 1px solid #03a4ff;
-    padding: 5px;
-    background: #FFFFFF;
-}
-.lineOne{
-width: 55.321px;
-height: 0px;
-transform: rotate(54.907deg);
-flex-shrink: 0;
-border-bottom: 1px solid #111115;
-position: absolute;
-bottom: 35px;
-left: 0;
-}
-.lineTwo{
-width: 57.321px;
-height: 0px;
-transform: rotate(54.907deg);
-flex-shrink: 0;
-border-bottom: 1px solid #111115;
-position: absolute;
-bottom: 35px;
-left: 3px;
-}
-.lineT{
-width: 22.672px;
-height: 0px;
-transform: rotate(42.424deg);
-flex-shrink: 0;
-border-bottom: 1px solid #111115;
-position: absolute;
-top: 39px;
-right: 46px;
-}
-.Links:visited{
-    color: inherit;
-}
+    height: 35px;
+  }
+
+  .btn:active{
+    background: #0076b2;
+    
+  }
 
 
-
-
-@media (max-width: 1240px) {
-    .container{
-
-        margin-right: 0;
-        margin-bottom: 20px;
-    }
-}
+  .btn p {
+    color: #03a4ff;
+    font-size: min(12px, 3vw);
+    margin: 0;
+    width: 100%;
+  }
