Setting Up User Email

--- a/src/components/HomePageCSS/homePage.module.css
+++ b/src/components/HomePageCSS/homePage.module.css
@@ -137,7 +137,7 @@
   height: 45px;
   width: 300px;
   border-radius: 5px;
-  border: #03a4ff 1px solid;
+  border: #03a3ff80 1px solid;
   padding: 0 10px;
 }
 
