--- a/src/components/HomePageCSS/dashProfile.module.css
+++ b/src/components/HomePageCSS/dashProfile.module.css
@@ -7,9 +7,9 @@ display: flex;
   padding:0 20px;
   height: 50px;
   margin: auto;
-  border-left: #03a4ff 1px solid;
-  border-right: #03a4ff 1px solid;
-  border-bottom: #03a4ff 1px solid;
+  border-left: #03a3ff8a 1px solid;
+  border-right: #03a3ff8a 1px solid;
+  border-bottom: #03a3ff8a 1px solid;
 }
 
 .userContainer p{
