--- a/src/components/Settings/SettingsCSS/homestyles.module.css
+++ b/src/components/Settings/SettingsCSS/homestyles.module.css
@@ -1,21 +1,19 @@
 .container{
+    border: 1px solid #03a4ff;
+    width: min(1440px, 90vw);
+    height: 98vh;
+    margin: auto;
+    border-radius: 20px;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: row;
-    background: #f5f5f5;
-    color: #111115;
-    width: 100vw;
 }
 
 
-  .panel{
-    height: 100vh;
-    width: 250px;
-    position:sticky;
-    overflow: hidden;
-    top: 0;
-    /* background-color: #acd7f5; */
-    background-color: #111115; 
-  }
+  
 .title{
     margin: 30px 20px;
     color: #111115;
@@ -35,19 +33,48 @@
     margin-left: 30px;
 }
 
+/* Style the intro panel */
+.intro{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 20px;
+  cursor: pointer;
+  width: 100%;
+}
 
-@media (max-width: 1240px) {
-    .container{
-     flex-direction: column;
-     align-items: center;
-     margin: auto;
-     width: 95vw;
-    }
-    .panel{
-        width: 100vw;
-        height: fit-content;
-        align-items: center;
-        position: relative;
-        background: transparent;
-      }
+
+.menu{
+  width: 100%;
+  height: 80px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-top-right-radius: 20px;
+  position: relative;
+  box-shadow: 0 4px 8px 0 rgba(177, 177, 177, 0.2);
+}
+
+/* Style Logout*/
+.logout{
+  margin-right: 20px;
+}
+
+.logout button{
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: #03a4ff;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+/* Button Onclick */
+.logout button:active{
+  color: #111115;
+  background: #ffffff;
+  border: #03a4ff 1px solid;
 }
