--- a/src/components/Settings/SettingsCSS/settingsCat.module.css
+++ b/src/components/Settings/SettingsCSS/settingsCat.module.css
@@ -1,17 +1,19 @@
 .Container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    width: 290px;
-    height: 140px;
-    background: #ffffff;
+    width: 300px;
+    border: #03a4ff 1px solid;
+    height: fit-content;
     border-radius: 8px;
     font-size: min(3vw, 14px);
     cursor: pointer;
     position: relative;
     text-decoration: none;
-    margin: 5px;
+    margin:40px 10px;
+    padding: 10px;
+
 }
 
 .Container:active{
@@ -35,6 +37,7 @@
     position: relative;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    align-items: center;
 } 
 .Cat:hover .Cont{
     cursor: pointer;
