--- a/src/components/Settings/SettingsCSS/attendance.module.css
+++ b/src/components/Settings/SettingsCSS/attendance.module.css
@@ -24,13 +24,15 @@
 .heading{
     margin: auto;
     padding: 10px;
-    background-color: #111115;
-    color: white;
+    width: 200px;
+    border: #03a4ff 1px solid;
+    color: #03a4ff;
     border-radius: 5px;
     font-size: 15px;
-    width: fit-content;
-    margin-top: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     text-transform: uppercase;
+    text-align: center;
 }
 .details{
     width: 50%;
@@ -78,12 +80,18 @@
     border-radius: 5px;
     text-align: center;
     color: #111115;
+    margin-top: 20px;
 }
 
 .day{
     padding: 10px;
-    background-color: #111115;
+    width: 200px;
+    border: #03a4ff 1px solid;
     color: white;
     border-radius: 5px;
     font-size: 15px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    color: #03a4ff;
+    text-align: center;
 }
