--- a/src/components/HomePageCSS/dashProfile.module.css
+++ b/src/components/HomePageCSS/dashProfile.module.css
@@ -1,15 +1,14 @@
 .userContainer{
-display: flex;
-  flex-direction: row;
+  display: flex;
+  flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
-  width: 98%;
-  padding:0 20px;
   height: 50px;
-  margin: auto;
   border-left: #03a3ff8a 1px solid;
   border-right: #03a3ff8a 1px solid;
   border-bottom: #03a3ff8a 1px solid;
+  width: 98%;
+  margin: auto;
 }
 
 .userContainer p{
