--- a/src/components/HomePageCSS/homePage.module.css
+++ b/src/components/HomePageCSS/homePage.module.css
@@ -10,6 +10,7 @@
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: row;
+  overflow: hidden;
 }
 .content{
   width: 100%;
@@ -197,6 +198,8 @@
   border-left: #03a4ff 1px solid;
   border-right: #03a4ff 1px solid;
   border-top: #03a4ff 1px solid;
+  position: sticky;
+  top: 0;
 
 }
 
@@ -206,4 +209,45 @@
   font-size: min(14px, 2vw);
   width: 12.5%;
   text-align: center;
+}
+
+.membersPeople{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  margin: auto;
+  max-height: 70vh;
+  overflow-y: auto;
+  padding-bottom: 100px;
+  direction: rtl;
+
+}
+
+.membersPeople::-webkit-scrollbar{
+  width: 5px;
+}
+.membersPeople::-webkit-scrollbar-thumb{
+  background: #03a4ff;
+  border-radius: 5px;
+}
+
+/* Position scrollbar absolute */
+
+.membersPeople::-webkit-scrollbar-track{
+  background: transparent;
+  
+}
+
+.members{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 98%;
+  margin: auto;
+  overflow-y: auto;
+  padding-bottom: 100px;
 }
