--- a/src/components/HomePageCSS/sidePanel.module.css
+++ b/src/components/HomePageCSS/sidePanel.module.css
@@ -8,7 +8,7 @@
     border-bottom-left-radius: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     
 }
