--- a/src/components/Settings/SettingsCSS/add-member.module.css
+++ b/src/components/Settings/SettingsCSS/add-member.module.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     background: #f5f5f5;
-
+    height: 100vh;
     color: #111115;
 }
 .Form{
@@ -173,11 +173,7 @@
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     position: relative;
-    background-image: url("");
-    background-position: center;
-    background-clip: border-box;
-    background-repeat: no-repeat;
-    background-size: cover;
+    
 }
 
 .profileDetails > p{
